# brave-core

./: DEPS  package-lock.json  package.json
app/: brave_generated_resources.grd  brave_strings.grd  generated_resources.grd  generated_resources_override.grd  os_settings_strings.grdp  settings_strings.grdp  shared_settings_strings.grdp
browser/: BUILD.gn  brave_content_browser_client.cc
common/: webui_url_constants.cc
components/: components_strings.grd  omnibox_strings.grdp  payments_strings.grdp  payments_strings_override.grdp
components/permissions/: BUILD.gn  permission_lifetime_manager.cc  permission_lifetime_manager.h  permission_lifetime_utils.cc
patches/: base-BUILD.gn.patch  build-config-BUILDCONFIG.gn.patch  build-config-android-config.gni.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  build-config-compiler-BUILD.gn.patch  chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-expectations-lint-suppressions.xml.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-native_page-NativePageFactory.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-ToolbarManager.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-top-ToolbarPhone.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-chrome_content_browser_client.h.patch  (+78 more)
(+48 files in other folders)
